[metadata]
name = stylgebra
version = attr: stylgebra.__version__
license = Apache 2.0
url = https://github.com/skieffer/stylgebra
description = Stylable algebraic expressions
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3

[options]
packages = find:
install_requires =
    sympy

[options.packages.find]
exclude = tests

[options.extras_require]
dev =
    pytest
    build
    twine
    invoke
